Migrated to Java11